Criando o arquivo estilo.css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Salvador</title>
+    <link rel="stylesheet" href="css/estilos.css">
+
 </head>
 <body>
     <header>
@@ -23,12 +25,12 @@
      
     </header>
     <h1>Cidade de Salvador </h1>
-    <p> <strong>Salvador</strong>  é um município brasileiro e capital do estado da <strong>Banhia</strong>. 
+    <p> <strong>Salvador</strong>  é um município brasileiro e capital do estado da <strong>Bahia</strong>. 
         Situada na Zona da Mata da <em>Região Nordeste do Brasil</em>.
         <strong>Salvador</strong>  é notável em todo o país pela sua gastronomia, música e arquitetura, reconhecidas também internacionalmente
         e apresenta os seguinte pontos turísticos:    
     </p>
-    <div>
+    <div id="lista">
         <ol>
             <li>Farol da Barra</li>
             <li>Pelourinho</li>
@@ -38,7 +40,10 @@
         </ol>
     </div>
 
-    <img src="img/Poster_Salvador.png" alt="cidade de Salvador">
+    <div id="imagem">
+        <img src="img/Poster_Salvador.png" alt="cidade de Salvador">
+    </div>
+   
     
 </body>
 </html>
